# simple_engine

./: CMakeLists.txt  LICENSE  notes180725.md  notes_03072025.md  notes_070725.md  notes_090725.md  notes_100725.md  notes_120725.md  readme.md  todos_3d_scene.md
assets/: joint_debug_mesh.glb  knight.glb  origin_post.glb  test.glb  test2.glb  test3.glb  unitcube.glb
include/: Win32Window.h  engine.h  gl_graphics.h  graphics.h  stb_image.h
src/: Win32Window.cpp  assimp_mesh_importer.cpp  editor.h  editor_main.cpp  game.h  graphics.cpp  input_manager_win32.cpp  main.cpp  renderer_common.cpp  renderer_dx11.cpp  renderer_gl46.cpp  renderer_sw.cpp  test_main.cpp
